# agent-shadow

./: .gitignore  LICENSE  README.md  install.py  install.sh  mission.md  pyproject.toml  requirements.txt  shadow.db
.Jules/: palette.md
docs/: architecture.md  sandbox_architecture.md  user_guide.md
shadow-android/: build.gradle.kts  settings.gradle.kts
shadow-android/app/: build.gradle.kts
shadow-android/app/src/main/: AndroidManifest.xml
shadow-android/app/src/main/java/com/shadow/os/: MainActivity.kt
shadow-android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_shortcut_chat.xml  ic_shortcut_task.xml
shadow-android/app/src/main/res/layout/: widget_layout.xml
shadow-android/app/src/main/res/values/: strings.xml  styles.xml
shadow-android/app/src/main/res/xml/: shortcuts.xml
shadow/agents/: base.py  jules.py  multi_agent.py
shadow/api/: server.py
shadow/cli/: main.py  mcp.py  onboard.py  tui.py
shadow/context/: context.py
shadow/core/: android_sandbox.py  browser.py  capabilities.py  config.py  database.py  debugger.py  dependencies.py  events.py  logging.py  mcp_manager.py  mcp_server.py  plugins.py  runtime.py  sandbox.py  scheduler.py  self_test.py  sync.py  telegram.py  update_logger.py
shadow/core/runtime/: execution_context.py  execution_engine.py  executor_registry.py  intent_router.py  progress_manager.py  result_builder.py  retry_manager.py  runtime.py  state_machine.py  task_executor.py  tool_selector.py  validator.py  workflow_selector.py
shadow/core/web/: browser.py  cache.py  crawler.py  exporter.py  extractor.py  knowledge.py  manager.py  provider.py  scraper.py  search.py
shadow/daemon/: __init__.py
shadow/goals/: engine.py  executor.py  generator.py  priority.py  reflection.py  scanner.py
shadow/mcp/: __init__.py
shadow/memory/: memory.py
shadow/providers/: __init__.py  anthropic.py  base.py  factory.py  google.py  manager.py  mock.py  ollama.py  openai.py
shadow/skills/: skills.py
shadow/tools/: android.py  base.py  clipboard.py  engine.py  filesystem.py  git.py  http.py  registry.py  sandbox.py  terminal.py
shadow/web/: __init__.py
tests/: conftest.py  test_api_cli.py  test_autonomous_runtime.py  test_backup_restore.py  test_capabilities.py  test_cli_no_mcp_regression.py  test_compatibility_config.py  test_context.py  test_dependencies.py  test_events_scheduler.py  test_executor.py  test_gemini_modernized.py  test_goals_engine.py  test_installer_cli.py  test_integration.py  test_mcp.py  test_memory.py  test_multi_agents.py  test_ollama.py  test_onboarding.py  test_opportunity_priority.py  test_polished_cli.py  test_provider_manager.py  test_providers.py  test_reflection_jules.py  test_runtime_loop.py  test_sandbox.py  test_settings_ux.py  test_telegram_bot.py  test_tools.py  test_update_diagnostics.py  test_web_intelligence.py
(+29 files in other folders)
