[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shadow-os"
version = "1.0.0"
description = "PROJECT SHADOW — Autonomous Goal-Driven Agent Operating System for Android (Termux)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Shadow AI Systems Architect" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Android",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "fastapi==0.115.8",
    "uvicorn==0.34.0",
    "rich==13.9.4",
    "watchdog==6.0.0",
    "httpx==0.28.1",
    "typer==0.15.1",
    "click==8.1.8"
]

[project.scripts]
shadow = "shadow.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["shadow"]
