[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shadow-os"
version = "1.0.0"
description = "PROJECT SHADOW — Autonomous Goal-Driven Agent Operating System for Android (Termux)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Shadow AI Systems Architect" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Android",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "pyyaml==6.0.3",
    "fastapi==0.139.2",
    "uvicorn==0.51.0",
    "rich==15.0.0",
    "watchdog==6.0.0",
    "httpx==0.28.1",
    "typer==0.27.0",
    "click==8.1.8",
    "python-dotenv==1.2.2",
    "mcp>=1.28.1",
]

[project.scripts]
shadow = "shadow.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["shadow"]
